# InfinityMetro

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  SUMMARY.md  appveyor.yml  gitbook_build.sh  index.html  requirements.txt  search_index.json
.github/workflows/: check.yml  coverage.yml
Diagram/: game-logic.puml
Documentation/: coding-guide.html  coding-guide.md
GUI/: game.py
Includes/InfinityMetro/: InfinityMetro.hpp  Test.hpp
Scripts/: azure_pipelines_build_linux.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  header_gen.py  travis_build_docker.sh  utils.py
Sources/InfinityMetro/: CMakeLists.txt  Test.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp
ci/: install-rust.sh
diagram/: game-logic.puml
src/: lib.rs  main.rs
src/core/game/: mod.rs  person.rs  room.rs  route.rs  station.rs  train.rs
tests/: test.rs
